--- a/html/trangdam.html
+++ b/html/trangdam.html
@@ -54,7 +54,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm maxy crepe</h4>
               <p class="text-danger fs-4">1.289.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -62,7 +62,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm maxy đính hoa</h4>
               <p class="text-danger fs-4">2.487.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -70,7 +70,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm maxy jersey</h4>
               <p class="text-danger fs-4">1.600.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm midi lụa</h4>
               <p class="text-danger fs-4">2.289.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -90,7 +90,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm midi lưới xếp li</h4>
               <p class="text-danger fs-4">2.500.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -98,7 +98,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm midi satin</h4>
               <p class="text-danger fs-4">1.500.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm ren corset</h4>
               <p class="text-danger fs-4">1.300.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -118,7 +118,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm sơ mi cotton</h4>
               <p class="text-danger fs-4">1.500.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -126,7 +126,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm maxi cutout</h4>
               <p class="text-danger fs-4">3.600.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm maxi hồng</h4>
               <p class="text-danger fs-4">2.300.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -146,7 +146,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm tua rua</h4>
               <p class="text-danger fs-4">3.500.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -154,7 +154,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Đầm midi dây rủ</h4>
               <p class="text-danger fs-4">3.600.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -193,5 +193,7 @@
       </div>
     </footer>
   </div>
+
+  <script src="/js/main.js"></script>
 </body>
 </html>
