--- a/html/trangquan.html
+++ b/html/trangquan.html
@@ -54,7 +54,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần bóng bay</h4>
               <p class="text-danger fs-4">1.289.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
 
@@ -63,7 +63,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần cạp cao</h4>
               <p class="text-danger fs-4">1.589.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
 
@@ -72,7 +72,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần ống đứng</h4>
               <p class="text-danger fs-4">1.600.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần ống loe</h4>
               <p class="text-danger fs-4">1.400.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -92,7 +92,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần palazzo</h4>
               <p class="text-danger fs-4">1.487.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -100,7 +100,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần thẳng Lumière</h4>
               <p class="text-danger fs-4">1.700.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần thể thao</h4>
               <p class="text-danger fs-4">1.500.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
 
@@ -121,7 +121,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần chân thon</h4>
               <p class="text-danger fs-4">2.000.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
 
@@ -130,7 +130,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần vải satin</h4>
               <p class="text-danger fs-4">2.200.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -142,7 +142,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần short đen</h4>
               <p class="text-danger fs-4">1.300.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -150,7 +150,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần short denim</h4>
               <p class="text-danger fs-4">1.500.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -158,7 +158,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Quần short vải</h4>
               <p class="text-danger fs-4">1.400.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -197,5 +197,7 @@
       </div>
     </footer>
   </div>
+
+  <script src="/js/main.js"></script>
 </body>
 </html>
