--- a/html/trangvay.html
+++ b/html/trangvay.html
@@ -54,7 +54,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy dây mini</h4>
               <p class="text-danger fs-4">1.200.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -62,7 +62,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy lụa tay lòe</h4>
               <p class="text-danger fs-4">2.300.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -70,7 +70,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy maxy jersey</h4>
               <p class="text-danger fs-4">3.600.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy midi poplin</h4>
               <p class="text-danger fs-4">1.500.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -90,7 +90,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy midi satin</h4>
               <p class="text-danger fs-4">2.487.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -98,7 +98,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy midi sequin</h4>
               <p class="text-danger fs-4">1.600.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy midi crepe</h4>
               <p class="text-danger fs-4">2.289.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -118,7 +118,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy midi vải lanh</h4>
               <p class="text-danger fs-4">3.487.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -126,7 +126,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy ngắn vải lanh</h4>
               <p class="text-danger fs-4">2.600.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy ngắn xếp li</h4>
               <p class="text-danger fs-4">1.200.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -146,7 +146,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy sóng cuộn</h4>
               <p class="text-danger fs-4">3.500.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -154,7 +154,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Váy ngắn đan gân</h4>
               <p class="text-danger fs-4">3.500.000 đ</p>
-              <button class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -193,5 +193,7 @@
       </div>
     </footer>
   </div>
+
+  <script src="/js/main.js"></script>
 </body>
 </html>
