--- a/html/dangnhap.html
+++ b/html/dangnhap.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="../asset/fontawesome-free-6.5.1-web/css/all.min.css">
   <!-- Link font chữ -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap&subset=vietnamese" rel="stylesheet">
+  <!-- Link bootstrap  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>Đăng nhập</title>
 </head>
 <body>
@@ -42,7 +44,7 @@
           <div class="col-md-6 mx-auto">
               <div id="card-tong" class="card mt-5 ">
                   <div class="card-header">
-                      <h2 class="card-title d-flex justify-content-center">Đăng nhập</h2>
+                      <h2 class="card-title d-flex justify-content-center text-dark">Đăng nhập</h2>
                   </div>
                   <div class="card-body">
                       <form action="#">
@@ -55,20 +57,20 @@
                               <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu">
                           </div>
                           <div class="d-grid gap-2">
-                              <a id= "bt_DN"type="submit" class="btn text-white " href="/html/trangchu.html">Đăng nhập</a>
-                              <a href="/html/trangchu.html" class="btn btn-link text-danger">Quên mật khẩu</a>
+                              <a id="bt_DN" type="submit" class="btn text-white ">Đăng nhập</a>
+                              <a class="btn btn-link text-danger">Quên mật khẩu</a>
                           </div>
 
                           <div class="mt-3">
-                              <p id = "p_1">Hoặc đăng nhập với:</p>
-                              <div id="DangNhap_khac" class="d-flex">
-                                  <a href="/html/trangchu.html" id = "fa1"class="btn  btn-sm">
-                                      <i id="icon1" class="fab fa-facebook"></i>
-                                  </a>
-                                  <a href="/html/trangchu.html" id = "fa2" class="btn btn-sm">
-                                      <i id="icon2" class="fab fa-google"></i>
-                                  </a>
-                              </div>
+                            <p id = "p_1">Hoặc đăng nhập với:</p>
+                            <div id="DangNhap_khac" class="d-flex">
+                              <a href="#" id="fa1" class="btn btn-sm text-light">
+                                <i id="icon1" class="fab fa-facebook"></i>
+                              </a>
+                              <a href="#" id="fa2" class="btn btn-sm text-light">
+                                <i id="icon2" class="fab fa-google"></i>
+                              </a>
+                            </div>
                           </div>
 
                           <div class="mt-3 text-center">
@@ -81,5 +83,6 @@
       </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
