--- a/html/gioithieuthanhvien.html
+++ b/html/gioithieuthanhvien.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="../css/sitemap.css">
   <!-- Link icon -->
   <link rel="stylesheet" href="../asset/fontawesome-free-6.5.1-web/css/all.min.css">
   <!-- Link font chữ -->
@@ -42,6 +43,7 @@
     <!-- Content main -->
     <div id="container" class="container-fluid pt-4 p-0">
       <main class="container p-4 bg-white">
+        <h2 class="h2 text-center fs-1">Giới thiệu thành viên</h2>
         <div class="card-group">
           <div class="card m-4 border-0">
             <img src="/asset/img/thanhVien/bich.jpg" alt="Bich" class="w-100 content__item-img">
@@ -59,10 +61,46 @@
           </div>
         </div>
       </main>
+      <!-- Sitemap -->
+      <main class="container p-4 bg-white">
+        <h2 class="h2 text-center fs-1">Site Map</h2>
+        <div class="row mb-4">
+          <div class="col d-flex justify-content-center">
+            <a class="btn_custom btn" href="../html/trangchu.html">Trang chủ</a>
+          </div>
+          <div class="col d-flex justify-content-center">
+            <a class="btn_custom btn" href="../html/trangao.html">Trang áo</a>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col d-flex justify-content-center">
+            <a class="btn_custom btn" href="../html/trangdam.html">Trang đầm</a>
+          </div>
+          <div class="col d-flex justify-content-center">
+            <a class="btn_custom btn" href="../html/trangvay.html">Trang váy</a>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col d-flex justify-content-center">
+            <a class="btn_custom btn" href="../html/trangquan.html">Trang quần</a>
+          </div>
+          <div class="col d-flex justify-content-center">
+            <a class="btn_custom btn" href="../html/dangnhap.html">Trang đăng nhập</a>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col d-flex justify-content-center">
+            <a class="btn_custom btn" href="../html/dangky.html">Trang đăng ký</a>
+          </div>
+          <div class="col d-flex justify-content-center">
+            <a class="btn_custom btn" href="../html/gioithieuthanhvien.html">Trang giới thiệu thành viên</a>
+          </div>
+        </div>
+      </main>
     </div>
 
-     <!-- Footer -->
-     <footer class="container-fluid p-0" id="footer">
+    <!-- Footer -->
+    <footer class="container-fluid p-0" id="footer">
       <div class="container footer__content">
         <h2 class="footer__contact">Contact us</h2>
         <div class="row m-2">
