--- a/html/trangao.html
+++ b/html/trangao.html
@@ -53,7 +53,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo ghi lê</h4>
               <p class="text-danger fs-4">1.200.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -61,7 +61,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo croptop hở vai</h4>
               <p class="text-danger fs-4">1.450.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -69,7 +69,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo Denim</h4>
               <p class="text-danger fs-4">1.000.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo gấm hoa</h4>
               <p class="text-danger fs-4">1.200.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -89,7 +89,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo cotton nơ đen</h4>
               <p class="text-danger fs-4">1.300.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -97,7 +97,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo sơ mi crepe mờ</h4>
               <p class="text-danger fs-4">1.000.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -109,7 +109,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo polo cashmere</h4>
               <p class="text-danger fs-4">1.289.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -117,7 +117,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo tank cổ yến</h4>
               <p class="text-danger fs-4">1.400.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -125,7 +125,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo họa tiết xù</h4>
               <p class="text-danger fs-4">1.600.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo sơ mi denim</h4>
               <p class="text-danger fs-4">1.400.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -145,7 +145,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo sơ mi lụa</h4>
               <p class="text-danger fs-4">1.400.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
           <div class="card m-4 border-0">
@@ -153,7 +153,7 @@
             <div class="content__item-desc">
               <h4 class="item__desc-productsname">Áo sơ mi vải đen</h4>
               <p class="text-danger fs-4">1.600.000 đ</p>
-              <button type="button" class="item__desc-btn btn btn-outline-danger">Mua ngay</button>
+              <button type="button" class="item__desc-btn btn btn-outline-danger" onclick="redictrectLogin()">Mua ngay</button>
             </div>
           </div>
         </div>
@@ -192,5 +192,7 @@
       </div>
     </footer>
   </div>
+
+  <script src="/js/main.js"></script>
 </body>
 </html>
