--- a/html/dangnhap.html
+++ b/html/dangnhap.html
@@ -50,11 +50,11 @@
                       <form action="#">
                           <div class="mb-3">
                               <label for="email" class="form-label">Email/ Số điện thoai/Tên đăng nhập</label>
-                              <input type="text" class="form-control" id="email" placeholder="Nhập email, số điện thoại hoặc tên đăng nhập">
+                              <input type="text" class="form-control" id="userNameDN" placeholder="Nhập email, số điện thoại hoặc tên đăng nhập">
                           </div>
                           <div class="mb-3">
                               <label for="password" class="form-label">Mật khẩu</label>
-                              <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu">
+                              <input type="password" class="form-control" id="passwordDN" placeholder="Nhập mật khẩu">
                           </div>
                           <div class="d-grid gap-2">
                               <a id="bt_DN" type="submit" class="btn text-white ">Đăng nhập</a>
