--- a/html/trangchu.html
+++ b/html/trangchu.html
@@ -59,13 +59,13 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img id="img1" src="/asset/img/slider/canva-slider.png" alt="Los Angeles" class="d-block" style="width:100%">
+      <img id="img1" src="/asset/img/slider/canva-slider.png"  class="d-block" style="width:100%">
     </div>
     <div class="carousel-item">
-      <img id="img2" src="/asset/img/slider/slide4.jpg" alt="Chicago" class="d-block" style="width:100%">
+      <img id="img2" src="/asset/img/slider/z5346549196808_8a43779bd52326735f05347ace49f190.jpg"  class="d-block" style="width:100%">
     </div>
     <div class="carousel-item">
-      <img id="img3" src="/asset/img/slider/slide3.jpg" alt="New York" class="d-block" style="width:100%">
+      <img id="img3" src="/asset/img/slider/slider13.jpg"  class="d-block" style="width:100%">
     </div>
   </div>
   <!-- Left and right controls/icons -->
