--- a/html/trangvay.html
+++ b/html/trangvay.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap&subset=vietnamese" rel="stylesheet">
    <!-- Link boostrap -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <title>Váy</title>
 </head>
 <body>
@@ -39,10 +41,36 @@
       </div>
     </header>
 
-    <!-- Slider -->
-    <div class="container-fluid p-0" id="">
-      <img src="/asset/img/slider/canva-slider.png" alt="" class="img">
+<!-- Slider -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+  
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img id="img1" src="/asset/img/slider/canva-slider.png"  class="d-block" style="width:100%">
     </div>
+    <div class="carousel-item">
+      <img id="img2" src="/asset/img/slider/z5346549196808_8a43779bd52326735f05347ace49f190.jpg"  class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img id="img3" src="/asset/img/slider/slider13.jpg"  class="d-block" style="width:100%">
+    </div>
+  </div>
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
 
     <!-- Content main -->
     <div id="container" class="container-fluid pt-4 p-0">
