--- a/html/gioithieuthanhvien.html
+++ b/html/gioithieuthanhvien.html
@@ -18,7 +18,7 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
-      <a href="#">
+      <a href="../html/sitemap.html">
         <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
       </a>
       <div class="header__link">
@@ -61,48 +61,12 @@
           </div>
         </div>
       </main>
-      <!-- Sitemap -->
-      <main class="container p-4 bg-white">
-        <h2 class="h2 text-center fs-1">Site Map</h2>
-        <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
-            <a class="btn_custom btn" href="../html/trangchu.html">Trang chủ</a>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <a class="btn_custom btn" href="../html/trangao.html">Trang áo</a>
-          </div>
-        </div>
-        <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
-            <a class="btn_custom btn" href="../html/trangdam.html">Trang đầm</a>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <a class="btn_custom btn" href="../html/trangvay.html">Trang váy</a>
-          </div>
-        </div>
-        <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
-            <a class="btn_custom btn" href="../html/trangquan.html">Trang quần</a>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <a class="btn_custom btn" href="../html/dangnhap.html">Trang đăng nhập</a>
-          </div>
-        </div>
-        <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
-            <a class="btn_custom btn" href="../html/dangky.html">Trang đăng ký</a>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <a class="btn_custom btn" href="../html/gioithieuthanhvien.html">Trang giới thiệu thành viên</a>
-          </div>
-        </div>
-      </main>
     </div>
 
     <!-- Footer -->
     <footer class="container-fluid p-0" id="footer">
       <div class="container footer__content">
-        <h2 class="footer__contact">Contact us</h2>
+        <h2 class="footer__contact" onclick="navigateSitemap()">Contact us</h2>
         <div class="row m-2">
           <div class="col">
             <div class="d-flex fs-4 text-center align-items-center">
