--- a/html/trangao.html
+++ b/html/trangao.html
@@ -19,7 +19,7 @@
   <div class="container-fluid m-0 p-0">
     <!-- Header -->
     <header id="header">
-      <a href="../html/gioithieuthanhvien.html">
+      <a href="../html/sitemap.html">
         <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
       </a>
       <div class="header__link">
@@ -191,7 +191,7 @@
     <!-- Footer -->
     <footer class="container-fluid p-0" id="footer">
       <div class="container footer__content">
-        <h2 class="footer__contact">Contact us</h2>
+        <h2 class="footer__contact" onclick="navigateSitemap()">Contact us</h2>
         <div class="row m-2">
           <div class="col">
             <div class="d-flex fs-4 text-center align-items-center">
