--- a/html/trangvay.html
+++ b/html/trangvay.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../asset/img/logo/logo-final.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../asset/img/logo/logo-final.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/base.css">
   <!-- Link icon -->
