update file word and gioithieuthanhvien.html

--- a/html/gioithieuthanhvien.html
+++ b/html/gioithieuthanhvien.html
@@ -43,20 +43,18 @@
     <!-- Content main -->
     <div id="container" class="container-fluid pt-4 p-0">
       <main class="container p-4 bg-white">
-        <h2 class="h2 text-center fs-1">Giới thiệu thành viên</h2>
+        <h2 class="text-center fs-1 text-uppercase">Giới thiệu thành viên</h2>
         <div class="card-group">
           <div class="card m-4 border-0">
             <img src="/asset/img/thanhVien/bich.jpg" alt="Bich" class="w-100 content__item-img">
-            <div class="card-body">
-              <h2 class="3  card-title p-2 m-0">Nguyễn Thị Ngọc Bích <br> DHHTTT18ATT</h2>
-              <p class="card-text fs-3 p-2">222637851</p>
+            <div class="card-body ">
+              <p class="fs-3 p-2 m-0">Nguyễn Thị Ngọc Bích <br> DHHTTT18ATT <br> 222637851</p>
             </div>
           </div>
           <div class="card m-4 border-0">
             <img src="/asset/img/thanhVien/thao.jpg" alt="Thao" class="w-100 content__item-img">
             <div class="card-body">
-              <h2 class="h3 card-title p-2 m-0">Trần Thị Thanh Thảo <br> DHHTTT18ATT</h2>
-                <p class="card-text fs-3 p-2">22637851</p>
+              <p class="fs-3 p-2 m-0">Trần Thị Thanh Thảo <br> DHHTTT18ATT <br> 22637851</p>
             </div>
           </div>
         </div>
